# USB-Oscilloscope

./: .gitignore  .prettierrc.license  CMakeLists.txt  DCO_V1.1.license  README.md
.reuse/: dep5
USB-Oscilloscope/: USB-Oscilloscope.kicad_pcb  USB-Oscilloscope.kicad_prl  USB-Oscilloscope.kicad_pro  USB-Oscilloscope.kicad_sch
cmake/: avr-gcc.cmake  sourcelist.cmake
docs/: CMakeLists.txt
include/USB-Oscilloscope/: USB-Oscilloscope.h
src/: main.cpp
